--- a/compose.yaml
+++ b/compose.yaml
@@ -11,6 +11,7 @@ services:
       - "3000:3000"
     volumes:
       - .:/app
+    working_dir: /app/frontend
     environment:
       - CHOKIDAR_USEPOLLING=true
     command: tail -f /dev/null
@@ -22,6 +23,7 @@ services:
       - "1323:1323"
     volumes:
       - .:/app
+    working_dir: /app/backend
     command: tail -f /dev/null
   db:
     image: postgres:15
