--- a/backend/.devcontainer/devcontainer.json
+++ b/backend/.devcontainer/devcontainer.json
@@ -1,10 +1,10 @@
 {
   "name": "backend",
   "dockerComposeFile": [
-    "../compose.yaml"
+    "../../compose.yaml"
   ],
-  "service": "app",
-  "workspaceFolder": "/app/",
+  "service": "backend",
+  "workspaceFolder": "/app/backend",
   "customizations": {
     "vscode": {
       "settings": {
