--- a/compose.yaml
+++ b/compose.yaml
@@ -25,6 +25,8 @@ services:
       - .:/app
     working_dir: /app/backend
     command: tail -f /dev/null
+    env_file:
+      - ./backend/.env
   db:
     image: postgres:15
     environment:
