--- a/compose.yaml
+++ b/compose.yaml
@@ -27,6 +27,8 @@ services:
     command: tail -f /dev/null
     env_file:
       - ./backend/.env
+    depends_on:
+      - db
   db:
     image: postgres:15
     environment:
