--- a/backend/.devcontainer/devcontainer.json
+++ b/backend/.devcontainer/devcontainer.json
@@ -16,7 +16,8 @@
         "ui.diagnostic.staticcheck": true,
         "[go]": {
           "editor.defaultFormatter": "golang.go"
-        }
+        },
+        "stripe.telemetry.enabled": false
       },
       "extensions": [
         "mosapride.zenkaku",
@@ -31,8 +32,10 @@
         "github.copilot",
         "github.copilot-chat",
         "github.copilot-labs",
-        "tamasfe.even-better-toml"
+        "tamasfe.even-better-toml",
+        "Stripe.vscode-stripe"
       ]
     }
-  }
+  },
+  "postCreateCommand": "./login_to_stripe.sh"
 }
