--- a/backend/Dockerfile.dev
+++ b/backend/Dockerfile.dev
@@ -3,8 +3,12 @@ ENV TZ=Asia/Tokyo LANG=C.UTF-8
 WORKDIR /app
 
 # Install system dependencies first
-RUN apt-get update && \
-  apt-get install -y postgresql-client && \
+# https://stripe.com/docs/stripe-cli#install
+SHELL ["/bin/bash", "-o", "pipefail", "-c"]
+RUN curl -s https://packages.stripe.dev/api/security/keypair/stripe-cli-gpg/public | gpg --dearmor | tee /usr/share/keyrings/stripe.gpg && \
+  echo "deb [signed-by=/usr/share/keyrings/stripe.gpg] https://packages.stripe.dev/stripe-cli-debian-local stable main" | tee -a /etc/apt/sources.list.d/stripe.list && \
+  apt-get update && \
+  apt-get install -y --no-install-recommends postgresql-client stripe expect && \
   apt-get clean && \
   rm -rf /var/lib/apt/lists/*
 
